# innowise_user_managment_service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  logging_config.py  mypy.ini  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 0e79aa270dd0_initial.py  1e2aff1b06ad_databasecheck.py  3dfeb24d718f_initial_migration.py  44501fdd080a_update_models.py  bc284456b816_initial.py
src/: main.py
src/api/: __init__.py  healthcheck.py
src/api/v1/: __init__.py  auth_endpoints.py  bearer.py  user_endpoints.py
src/api/v1/auth/: __init__.py  login_endpoint.py  signup_endpoint.py
src/api/v1/user/: __init__.py  delete_me_endpoint.py  delete_user_endpoint.py  get_me_endpoint.py  patch_me_endpoint.py  read_current_user_endpoint.py  update_user_endpoint.py
src/core/: config.py  dependencies.py  exeption_handlers.py  main.py  middleware.py
src/core/database/: database.py
src/core/database/enums/: role.py  sorting.py  token.py
src/core/routers/: healthcheck.py
src/core/schemas/: group.py  message_reset_password.py  schemas.py  user.py  validate_create_user_shemas.py
src/managers/: rabbitmq_manager.py  s3_bucket_manager.py  token_manager.py  user.py  user_manager.py
src/routers/: healthcheck.py
src/services/: authorization_service.py  password.py  rabbitmq_service.py  s3_service.py  token_sevice.py  user_service.py  validations.py
src/user_management_service/: database.py  main.py  models.py
src/utils/: password.py  validate_create_user_schemas.py
(+2 files in other folders)
