[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Avizhonis <aviz11@bk.ru>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
asyncio = "^3.4.3"
sqlalchemy = "^2.0"
pydantic = {extras = ["email"], version = "^2.7.3"}
alembic = "^1.12.1"
redis = "^5.0.4"
aioboto3 = "^13.0.0"
pika = "^1.2.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
docker = "^7.1.0"
pre-commit = "^3.7.1"
setuptools = "^70.0.0"
install = "^1.3.5"
logging = "^0.4.9.6"
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
aio-pika = "^9.4.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
ruff = "^0.4.6"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
mypy = "^0.910"
black = "^24.4.2"

[tool.isort]
profile = "ruff"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
strict_optional = true
warn_no_return = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
